DB기반 서비스 및 컨트롤러 수정함. 서비스 기능분리 명확하게함